--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -99,6 +99,7 @@
                     [infiniteScrollContainer]="selector"
                     [fromRoot]="true"
                     (scrolled)="onScrollDown($event)"
+                    style="background-color: blue;"
                     *ngIf="items?.length>=1">
                     <div *ngFor="let item of items">
                         <item-card [item]="item"
