comment tiny bug

--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -12,6 +12,7 @@
 				</div>
 				<div>
 					<div class="label-gray">Harga Belanja</div>
+					<!-- <div class="label-gray-2">{{item.grand_total| number:'1.0-0' | rupiah : 'bulat'}}</div> -->
 					<div class="label-gray-2">{{item.grand_total| rupiah : 'bulat'}}</div>
 				</div>
 			</div>
