--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -43,11 +43,11 @@
 	</div>
 	<div id="masking"
 		*ngIf="item.availability == 'COMING_SOON' || item.availability == 'OUT_OF_STOCK'"
-		class="rectangle-87">
+		class="rectangle-87 w-100">
 	</div>
 	<div id="above-masking"
 		*ngIf="item.availability == 'COMING_SOON' || item.availability == 'OUT_OF_STOCK'"
-		class="rectangle-87">
+		class="rectangle-87 w-100">
 		<div class="d-flex flex-grow-1 flex-row-reverse align-items-end"
 			style="height: 100%;">
 			<div class="container-29">
