--- a/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout.component.html
@@ -29,7 +29,7 @@
                         class="w-100">
                         <div *ngFor="let item of items">
                             <item-card [item]="item"
-                                (onUpdateQty)="updateItemCartList($event)"></item-card>
+                                (onUpdateQty)="updateItemCartList()"></item-card>
                             <wsv wide="40px"></wsv>
                         </div>
                     </div>
