--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -92,6 +92,9 @@
             <div id="left-container"
                 [style.height.px]="leftContainerHeight"
                 class="flex-grow-1">
+                <div block-ui="myBlockUI">
+                    <p> ... I'm blockable ... </p>
+                </div>
                 <div infiniteScroll
                     [infiniteScrollDistance]="2"
                     [infiniteScrollUpDistance]="1.5"
