--- a/src/app/layout/pages/main-layout/main-layout.component.html
+++ b/src/app/layout/pages/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <div class="main-layout">
 	<div class="header">
-		<app-header></app-header>
+		<header></header>
 	</div>
 
 	<div id="main-layout-container">
