--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -126,3 +126,10 @@
 
     </ng-template>
 </block-ui>
+
+<div style="position:absolute;top:92%;left:50%;height:60px;width:60px;"
+    id="divload"
+    *ngIf="isSpinner">
+    <img src="../../../../../assets/image/icons/nestloading.gif"
+        style="position: relative;width:50px;">
+</div>
