--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -12,8 +12,7 @@
 				</div>
 				<div>
 					<div class="label-gray">Harga Belanja</div>
-					<!-- <div class="label-gray-2">{{item.grand_total| number:'1.0-0' | rupiah : 'bulat'}}</div> -->
-					<div class="label-gray-2">{{item.grand_total| rupiah : 'bulat'}}</div>
+					<div class="label-gray-2">{{item.grand_total| number:'1.0-0' | rupiah : 'bulat'}}</div>
 				</div>
 			</div>
 
@@ -43,11 +42,11 @@
 	</div>
 	<div id="masking"
 		*ngIf="item.availability == 'COMING_SOON' || item.availability == 'OUT_OF_STOCK'"
-		class="rectangle-87 w-100">
+		class="rectangle-87">
 	</div>
 	<div id="above-masking"
 		*ngIf="item.availability == 'COMING_SOON' || item.availability == 'OUT_OF_STOCK'"
-		class="rectangle-87 w-100">
+		class="rectangle-87">
 		<div class="d-flex flex-grow-1 flex-row-reverse align-items-end"
 			style="height: 100%;">
 			<div class="container-29">
