--- a/src/app/shared/components/check-box-two/check-box-two.component.scss
+++ b/src/app/shared/components/check-box-two/check-box-two.component.scss
@@ -9,20 +9,28 @@
 	border: 1px solid $color-primary;
 	border-radius: 50%;
 	box-sizing: border-box;
-	position: relative;float:left;
-	
+	position: relative;
+	float: left;
 }
 
-#left-box{
-	position: relative;float:left;width:10%;
+#left-box {
+	position: relative;
+	float: left;
+	width: 10%;
 }
 
-#right-box{
-	position: relative;float:left;margin-left:10px;width:70%;
+#right-box {
+	position: relative;
+	float: left;
+	margin-left: 10px;
+	width: 80%;
 }
 
-.data-box{
-	float:left;position: relative;width:100%;height:15px;
+.data-box {
+	float: left;
+	position: relative;
+	width: 100%;
+	height: 15px;
 	font-family: $primary-font;
 	font-style: normal;
 	font-weight: bold;
@@ -33,7 +41,7 @@
 	color: $abu-abu-gelap;
 }
 
-.big{
+.big {
 	font-family: $primary-font;
 	font-style: normal;
 	font-weight: bold;
@@ -51,12 +59,12 @@
 }
 
 .custom-checkbox-mark {
-	width: 17.23px; 
+	width: 17.23px;
 	height: 12.02px;
 	margin-left: 1px;
 	margin-bottom: 13px;
 }
 
-.tautan{
+.tautan {
 	cursor: pointer;
 }
