--- a/src/app/modules/cart2/components/item-card/item-card.component.scss
+++ b/src/app/modules/cart2/components/item-card/item-card.component.scss
@@ -68,6 +68,7 @@
 	top: 0px;
 	left: 0px;
 	height: 100%;
+	width: 100%;
 }
 
 #above-masking {
@@ -76,6 +77,7 @@
 	top: 0px;
 	left: 0px;
 	height: 100%;
+	width: 100%;
 }
 
 #out-of-stock {
