request approval const

--- a/src/app/modules/request-approval/components/item-card/item-card.component.html
+++ b/src/app/modules/request-approval/components/item-card/item-card.component.html
@@ -54,8 +54,7 @@
 					<div class="d-flex flex-row-reverse">
 						<div id="out-of-stock"
 							class="d-flex justify-content-center align-items-center">
-							<!-- {{item.status}} -->
-							OUT OF STOCK
+							{{status()}}
 						</div>
 					</div>
 				</div>
