--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,10 @@
 @import './variables/colors';
 @import './variables/fonts';
 
+* {
+	font-family: $primary-font;
+	font-style: normal;
+}
 html,
 body {
 	height: 100%;
@@ -46,7 +50,7 @@ button:focus {
 
 @media (max-width: 1366px) {
 	.container {
-		max-width: 1100px; 
+		max-width: 1100px;
 	}
 }
 
