--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div id="top-fixed">
-		<div id="keranjang-label">REQUEST APPROVAL {{leftContainerHeight}} {{topFixed}} {{headers}}</div>
+		<div id="keranjang-label">REQUEST APPROVAL</div>
 		<wsv wide="14px"></wsv>
 		<request-approval-address [fullname]="fullname"
 			[addressData]="addressData"></request-approval-address>
