--- a/src/app/shared/components/email-button/email-button.component.html
+++ b/src/app/shared/components/email-button/email-button.component.html
@@ -1,2 +1,2 @@
-<img src="../../../../assets/image/icons/email_button.png"
-	id="email-button">
+<a href="mailto:{{email}}"><img src="../../../../assets/image/icons/email_button.png"
+		id="email-button"></a>
