--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -6,30 +6,84 @@
 		</div>
 		<div id="pilih-produk-container-2"
 			class="flex-grow-1">
-			<div class="white-space"></div>
-			<address-section borderRadius='20px'
-				wide='75%'></address-section>
-			<div class="white-space"></div>
-			<div *ngIf="qtyproduk > 0;else kosong">
-				<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">{{keyword}}</span> di
-					<span id="choosen-produk">{{namakategori}}</span>
+			<div id="top-fixed">
+				<div class="white-space"></div>
+				<address-section borderRadius='20px'
+					wide='60%'></address-section>
+				<div class="white-space"></div>
+				<div *ngIf="qtyproduk > 0;else kosong">
+					<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">{{keyword}}</span> di
+						<span id="choosen-produk">{{namakategori}}</span>
+					</div>
+				</div>
+				<div class="white-space"></div>
+
+			</div>
+
+
+
+			<wsv wide="60px"></wsv>
+
+
+			<!-- <app-catalog [items]="items"></app-catalog> -->
+			<div class="container d-flex">
+				<div id="left-container"
+					[style.height.px]="leftContainerHeight"
+					class="flex-grow-1">
+
+					<div style="margin-top:20px;padding-top:60px;"
+						infiniteScroll
+						[infiniteScrollDistance]="2"
+						[infiniteScrollUpDistance]="1.5"
+						[infiniteScrollThrottle]="50"
+						[infiniteScrollContainer]="selector"
+						[fromRoot]="true"
+						(scrolled)="onScrollDown($event)"
+						*ngIf="items?.length>=1">
+						<div>
+
+							<wsv wide="10px"></wsv>
+
+							<div class="d-flex">
+								<wsh wide="20px"></wsh>
+								<app-catalog [items]="items"></app-catalog>
+							</div>
+
+							<wsv wide="10px"></wsv>
+
+						</div>
+					</div>
 				</div>
 			</div>
-			<ng-template #kosong><b>Barang</b> {{keyword}} <b>tidak tersedia</b></ng-template>
-			<div class="white-space"></div>
-			<!-- *ngIf="IsWait" -->
-			<mat-progress-spinner mode="indeterminate"
-				diameter="30"
-				color="warn"
-				*ngIf="IsWait"></mat-progress-spinner>
+
+			<div style="position:absolute;top:90%;left:55%;height:60px;width:60px;z-index: 1000;"
+				id="divload"
+				*ngIf="isSpinner">
+				<img src="../../../../../assets/image/icons/nestloading.gif"
+					style="position: relative;width:50px;">
+			</div>
 
 
+			<ng-template #kosong>
+				<div class="nope">
+					<img src="../../../../../assets/image/icons/nope.svg"
+						style="position: relative;width:66px;">
+				</div>
 
-			<app-catalog [items]="items"></app-catalog>
+				<div class="nope-text">Barang tidak tersedia</div>
+
+
+				<!-- <b>Barang</b> {{keyword}} <b>tidak tersedia</b> -->
+
+			</ng-template>
+
+
 		</div>
 	</div>
 
 </div>
+
+
 
 <!-- <div class="footer"> -->
 <!-- <footer-bar></footer-bar> -->
