--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../styles/variables/colors';
+@import '../../../../../styles/variables/fonts';
 
 #pilih-produk-container-1 {
 	background: $putih-tok;
@@ -26,4 +27,67 @@
 
 #choosen-produk {
 	font-weight: bold;
+}
+
+
+#left-container {
+	height: 100%;
+	overflow: scroll;
+}
+
+
+#top-fixed {
+	position: fixed;
+	width: 50%;
+	background-color: $main-background;
+	z-index: 1;
+}
+
+.nope-text{
+	position: absolute;
+	left: 60%;
+	top: 50%;
+	font-family: $primary-font;
+	transform: translate(-50%, -50%);
+	width:80%;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 26px;
+	line-height: 35px;
+	text-align: center;
+	font-feature-settings: 'kern' off;
+	color: $abu-abu-gelap;
+}
+
+.nope{
+	position: absolute;
+	left: 60%;
+	top: 40%;
+	transform: translate(-50%, -50%);
+	padding: 10px;
+}
+
+
+
+#left-container {
+	height: 100%;
+	overflow: scroll;
+}
+
+#right-container {
+	overflow: scroll;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+#left-container::-webkit-scrollbar {
+	display: none;
+}
+
+#right-container::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#scrollable-div {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
 }
