Revisi Page Transaksi

--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
@@ -80,4 +80,10 @@
 
     </div>
 
+    <div id="divload"
+        *ngIf="isSpinner">
+        <img src="../../../../../assets/image/icons/nestloading.gif"
+            style="position: relative;width:50px;">
+    </div>
+
 </block-ui>
