--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
@@ -27,6 +27,10 @@
 	}
 }
 
+#divload{
+	position:absolute;top:92%;left:50%;height:60px;width:60px;
+}
+
 #keranjang-label {
 	font-family: $primary-font;
 	font-weight: bold;
