Revisi Bug: Replacing double quotes from search filter

--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -8,6 +8,7 @@
     </div>
 
     <ng-template #elseBlock>
+        <wsv wide="5px"></wsv>
         <div class="container">
             <div id="top-fixed">
                 <div id="keranjang-label">APPROVAL</div>
