--- a/src/app/shared/components/qty-ctrl/qty-ctrl.component.html
+++ b/src/app/shared/components/qty-ctrl/qty-ctrl.component.html
@@ -26,7 +26,8 @@
 			(input)="formatNumbersss()"
 			[attr.disabled]="allowChanges? null : ''"
 			(keypress)="preventAlphabet($event)"
-			(change)="qtyChange()">
+			(change)="qtyChange()"
+			autocomplete="off">
 		<div id="horizontal-underline">
 		</div>
 	</div>
