--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -53,7 +53,7 @@
 				<div class="d-flex flex-row-reverse">
 					<div id="out-of-stock"
 						class="d-flex justify-content-center align-items-center">
-						{{item.availability}}
+						{{getAvailabilityLabel()}}
 					</div>
 				</div>
 				<wsv wide="9px"></wsv>
