Perbaikan tampilan detail produk

--- a/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
+++ b/src/app/modules/detail-product/components/floating-footer/floating-footer.component.html
@@ -8,7 +8,8 @@
 		<div id="float-foot-wrapper"
 			class="container d-flex 
 		justify-content-between align-items-center">
-			<div id="review-foot">{{productDetail?.product_name}}</div>
+			<div id="review-foot"
+				style="max-width: 700px;">{{productDetail?.product_name}}</div>
 			<div class="d-flex align-items-center">
 				<div>
 					<div id="total-foot-label">Total</div>
