[Request Approval] Purchaser Name Still Using Hardcode

--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<wsv wide="20px"></wsv>
 	<div id="top-fixed">
 		<div id="keranjang-label">REQUEST APPROVAL</div>
 		<wsv wide="14px"></wsv>
