--- a/src/app/modules/detail-product/components/price/price.component.html
+++ b/src/app/modules/detail-product/components/price/price.component.html
@@ -14,14 +14,14 @@
 	</div>
 	<div *ngIf="productDetail?.product_size">
 		<info-row title="Berat">
-			<span class="info-row-content">2.400gr</span>
+			<span class="info-row-content">{{productDetail?.product_size}}</span>
 		</info-row>
 		<wsv wide="15px"></wsv>
 	</div>
 
 	<info-row title="Stok"
 		*ngIf="productDetail?.stock">&nbsp;&nbsp;
-		<span class="info-row-content">25</span>
+		<span class="info-row-content">{{productDetail?.stock}}</span>
 	</info-row>
 	<wsv wide="27px"></wsv>
 	<qty-ctrl notif="true"
