--- a/src/app/modules/request-approval/components/item-card2/item-card2.component.html
+++ b/src/app/modules/request-approval/components/item-card2/item-card2.component.html
@@ -2,7 +2,7 @@
     <div class="rectangle-87">
         <div class="d-flex header-wrapper align-items-center">
             <div id="kolom-satu">
-                <div class="label-gray">{{item.supplier_name}}</div>
+                <div class="label-gray">{{datauser.fullname}}</div>
                 <div class="label-gray-2">{{item.updated_at | tanggal: 'tgl'}}</div>
             </div>
             <div class="d-flex flex-grow-1 justify-content-between">
@@ -12,7 +12,8 @@
                 </div>
                 <div>
                     <div class="label-gray">Harga Belanja</div>
-                    <div class="label-gray-2">{{item.grand_total| rupiah : 'bulat'}}</div>
+                    <div class="label-gray-2">{{item.grand_total| rupiah : 'bulat'}}
+                    </div>
                 </div>
             </div>
 
