fix bug input quantity

--- a/src/app/shared/components/qty-ctrl-two/qty-ctrl-two.component.html
+++ b/src/app/shared/components/qty-ctrl-two/qty-ctrl-two.component.html
@@ -20,7 +20,7 @@
 			type="number"
 			maxlength="6"
 			[(ngModel)]="qty"
-			(change)="onChange()">
+			(ngModelChange)="onChange()">
 		<div id="horizontal-underline">
 		</div>
 	</div>
