--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -19,14 +19,17 @@
 				</div>
 				<div class="d-flex align-items-center">
 					<label-with-notif label="approval"
+						(contextmenu)="onRightClick($event, {content: 'Approval', redir: 'approval'})"
 						[badge]="nApproval"
 						(click)="goToApproval()"></label-with-notif>
 					<wsh wide="20px"></wsh>
 					<label-with-notif label="Transaksi"
+						(contextmenu)="onRightClick($event, {content: 'Transaksi', redir: 'transaction'})"
 						(click)="goToTransaction()"
 						[badge]="nTransaction"></label-with-notif>
 					<wsh wide="20px"></wsh>
 					<logo-with-notif [badge]="nCart"
+						(contextmenu)="onRightClick($event, {content: 'Cart', redir: 'cart'})"
 						(click)="goToCart()"></logo-with-notif>
 				</div>
 			</div>
