Revisi Bug: [Approval] There Are No Information About Purchaser & Date On Each Item

--- a/src/app/shared/components/check-box-two/check-box-two.component.html
+++ b/src/app/shared/components/check-box-two/check-box-two.component.html
@@ -7,14 +7,14 @@
 			</div>
 		</div>
 		<div id="right-box">
-			<div class="data-box">{{detSupplier}}</div>
+			<div class="data-box">{{detPurchaser}}</div>
 			<div class="data-box big">{{detDate | tanggal: 'tgl'}}</div>
 		</div>
 	</div>
 	<ng-template #elseBlock>
 		<div class="custom-checkbox"></div>
 		<div id="right-box">
-			<div class="data-box">{{detSupplier}}</div>
+			<div class="data-box">{{detPurchaser}}</div>
 			<div class="data-box big">{{detDate | tanggal: 'tgl'}}</div>
 		</div>
 	</ng-template>
