fix scroll address dialog

--- a/src/app/shared/components/address-section/address-section.component.html
+++ b/src/app/shared/components/address-section/address-section.component.html
@@ -1,4 +1,4 @@
-<div id="{{divnya}}"
+<div id="location-user"
 	[ngStyle]="stylesObj"
 	(click)="openDialogLocation()">
 	<div id="location-user-detail">
