fix padding addres diaog

--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -36,4 +36,12 @@
 
 		<wsv wide="43px"></wsv>
 	</div>
+	<div class="d-flex justify-content-center align-items-center"
+		style="cursor: pointer;">
+		<img src="../../../../assets/image/icons/plus-red.png"
+			class="plus-red">
+		<wsh wide="15px"></wsh>
+		<div id="loc-bottom">Tambah Alamat Baru</div>
+	</div>
+	<wsv wide="24px"></wsv>
 </div>
