--- a/src/app/modules/transaction-detail/components/status-label/status-label.component.html
+++ b/src/app/modules/transaction-detail/components/status-label/status-label.component.html
@@ -1,21 +1,22 @@
-<div *ngIf="status == 'ORDERED' || status == 'PENDING' || status == 'PROCESS' || status == 'DELIVER'"
+<div *ngIf="tampilkanSelesaiAbu2()"
 	class="gray-label">SELESAI</div>
 
-<div *ngIf="status == 'RECEIVED'"
+<div *ngIf="tampilkanSelesaiMerah()"
 	class="red-label"
 	(click)="confirmOrder()">SELESAI</div>
 
-<div *ngIf="status == 'CLOSED'"
+<div *ngIf="tampilkanBeliLagi()"
 	class="red-label"
 	(click)="ajukanLagi()">BELI LAGI</div>
 
-<div *ngIf="status == 'REJECTED'"
+<div *ngIf="tampilkanAjukanLagi()"
 	class="red-label"
 	(click)="ajukanLagi()">AJUKAN LAGI</div>
 
-<div *ngIf="status == 'OUTOFSTOCK' || status == 'CANCEL'"
+<div *ngIf="tampilkanCariSejenis()"
 	class="red-label"
 	(click)="cariSejenis()">CARI SEJENIS</div>
+
 
 <!-- 
 case 'ORDERED':
