--- a/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
+++ b/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
@@ -24,14 +24,12 @@
 							<wsv wide="3px"></wsv>
 							<div class="label-2">{{item?.requested_at|tanggal : 'tgl'}}</div>
 						</div>
-						<div
-							*ngIf="!(item?.status == 'OUTOFSTOCK' || item?.status == 'CANCEL' || item?.status == 'REJECTED')">
+						<div *ngIf="tampilkanNoPemesananPengirimanNoResi()">
 							<div class="label-1">No. Pemesanan</div>
 							<wsv wide="3px"></wsv>
 							<div class="label-2">{{item?.order_code}}</div>
 						</div>
-						<div
-							*ngIf="!(item?.status == 'OUTOFSTOCK' || item?.status == 'CANCEL' || item?.status == 'REJECTED')">
+						<div *ngIf="tampilkanNoPemesananPengirimanNoResi()">
 							<div class="label-1">Pengiriman & No. Resi</div>
 							<wsv wide="3px"></wsv>
 							<div class="label-2">{{item?.receipt_number}}</div>
@@ -57,15 +55,8 @@
 						<div class="label-4">{{item?.purchase_amount|rupiah}}</div>
 						<wsv wide="7px"></wsv>
 
-						<div *ngIf="
-							item?.status == 'ORDERED' || 
-							item?.status == 'PENDING' || 
-							item?.status == 'PROCESS' || 
-							item?.status == 'DELIVER' || 
-							item?.status == 'RECEIVED' ||
-							 item?.status == 'CLOSED'">
-							<div *ngIf="item?.initial_quantity != item?.quantity"
-								class="label-1 coret">Jumlah : {{item?.initial_quantity}} Barang</div>
+						<div *ngIf="tampilkanHargaCoret()">
+							class="label-1 coret">Jumlah : {{item?.initial_quantity}} Barang
 						</div>
 						<div class="label-1">Jumlah :{{item?.quantity}} barang</div>
 					</div>
@@ -89,13 +80,7 @@
 						<div class="label-1">Perkiraan Waktu Sampai:</div>
 						<div class="label-2">{{estimateDeliveryTime(item)}}</div>
 					</div>
-					<div *ngIf="
-					item?.status == 'ORDERED' ||
-					item?.status == 'PENDING' ||
-					item?.status == 'PROCESS' ||
-					item?.status == 'DELIVER' ||
-					item?.status == 'RECEIVED' ||
-					item?.status == 'CLOSED'">
+					<div *ngIf="tampilkanAlasanPartialFulfilled()">
 						<div *ngIf="item?.initial_quantity != item?.quantity">
 							<div class="label-1">Alasan:</div>
 							<div class="label-4">
@@ -128,44 +113,6 @@
 			<div id="top-fixed"
 				class="bg-10">
 				<wsv wide="30px"></wsv>
-
-				<!-- <div id="left-container"
-					class="d-flex justify-content-start"
-					style="width:700px;background: #FFFFFF;float:left;position: relative;
-			box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
-			border-radius: 10px;">
-
-					<div class="d-flex flex-column">
-						<div class="p-2">
-							<detail-pesanan></detail-pesanan>
-						</div>
-						<div class="p-2">
-							<status-pesanan></status-pesanan>
-						</div>
-					</div>
-
-
-
-
-
-
-
-				</div>
-
-				<wsh wide="20px"></wsh>
-
-				<div id="right-container"
-					class="d-flex justify-content-end"
-					style="height:auto;min-height:510px;width:380px;background: #FFFFFF;float:left;
-			box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
-			border-radius: 10px;position: relative;float:right;">
-					<rekap-tagihan></rekap-tagihan>
-				</div> -->
-
-
-
-
-
 			</div>
 		</div>
 
