Revisi Bug: [Keranjang] Empty State Keranjang Is Not Similar Like Mock Up

--- a/src/app/modules/account/components/account-nav-item/account-nav-item.component.html
+++ b/src/app/modules/account/components/account-nav-item/account-nav-item.component.html
@@ -1,5 +1,5 @@
 <div class="account-item-label d-flex"
-	[ngClass]="selected == item.label ? 'selected' : ''">
+	[ngClass]="selected == item ? 'selected' : ''">
 	<wsh wide="14px"></wsh>
 	<div (click)="navigate()">
 		<wsv wide="7px"></wsv>
