--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
@@ -46,7 +46,7 @@
 .nope-text{
 	position: absolute;
 	left: 60%;
-	top: 60%;
+	top: 360px;
 	font-family: $primary-font;
 	transform: translate(-50%, -50%);
 	width:80%;
@@ -62,7 +62,7 @@
 .nope{
 	position: absolute;
 	left: 60%;
-	top: 50%;
+	top: 300px;
 	transform: translate(-50%, -50%);
 	padding: 10px;
 }
