--- a/src/app/modules/cart2/pages/cart-layout/cart-layout2.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout2.component.html
@@ -1,9 +1,10 @@
 <block-ui>
 	<div class="container d-flex">
-		<div *ngIf="total_item == 0 else elseBlock"
+		<div *ngIf="total_item != 0 else elseBlock"
 			class="w-100 d-flex justify-content-center">
+
 			<div>
-				<wsv wide="20px"></wsv>
+				<wsv wide="150px"></wsv>
 				<empty-cart></empty-cart>
 			</div>
 		</div>
