--- a/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
+++ b/src/app/modules/request-approval/pages/request-approval-layout/request-approval-layout.component.html
@@ -1,26 +1,29 @@
-<div class="container">
-	<wsv wide="20px"></wsv>
-	<div id="top-fixed">
-		<div id="keranjang-label">REQUEST APPROVAL</div>
-		<wsv wide="14px"></wsv>
-		<request-approval-address [fullname]="fullname"
-			[addressData]="addressData"></request-approval-address>
-	</div>
-
-	<div class="d-flex">
-		<div class="flex-grow-1"
-			id="left-container"
-			[style.height.px]="leftContainerHeight">
-			<wsv wide="20px"></wsv>
-			<div *ngFor="let item of items">
-				<item-card2 [item]="item"></item-card2>
-				<wsv wide="20px"></wsv>
-			</div>
+<block-ui>
+	<div class="container">
+		<wsv wide="20px"></wsv>
+		<div id="top-fixed">
+			<div id="keranjang-label">REQUEST APPROVAL </div>
+			<wsv wide="14px"></wsv>
+			<request-approval-address [fullname]="fullname"
+				[addressData]="addressData"></request-approval-address>
 		</div>
-		<wsh wide="20px"></wsh>
-		<box-cart-price [pertotalan]="pertotalan"
-			[buttonDisable]="false"
-			buttonLabel="Selanjutnya"
-			(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
+
+		<div class="d-flex">
+			<div class="flex-grow-1"
+				id="left-container"
+				[style.height.px]="leftContainerHeight">
+				<wsv wide="20px"></wsv>
+				<div *ngFor="let item of items">
+					<item-card2 [item]="item"></item-card2>
+					<wsv wide="20px"></wsv>
+				</div>
+				<wsv wide="40px"></wsv>
+			</div>
+			<wsh wide="20px"></wsh>
+			<box-cart-price [pertotalan]="pertotalan"
+				[buttonDisable]="false"
+				buttonLabel="Selanjutnya"
+				(buttonBoxCartPriceClick)="selanjutnyaClick()"></box-cart-price>
+		</div>
 	</div>
-</div>
+</block-ui>
