--- a/src/app/modules/account/components-info-perusahaan/rounded-input/rounded-input.component.scss
+++ b/src/app/modules/account/components-info-perusahaan/rounded-input/rounded-input.component.scss
@@ -21,7 +21,7 @@ input {
 	/* or 171% */
 }
 
-input ::placeholder {
+::placeholder {
 	background: transparent;
 	font-family: $primary-font;
 	font-style: normal;
