Revisi Bug: [Informasi Perusahaan] Font Color In Form Tambah Alamat Is Not Similar Like Mock Up

--- a/src/app/modules/cart2/pages/cart-layout/cart-layout2.component.html
+++ b/src/app/modules/cart2/pages/cart-layout/cart-layout2.component.html
@@ -1,6 +1,6 @@
 <block-ui>
 	<div class="container d-flex">
-		<div *ngIf="total_item != 0 else elseBlock"
+		<div *ngIf="total_item == 0 else elseBlock"
 			class="w-100 d-flex justify-content-center">
 
 			<div>
