add load page in detail product, currency

--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
@@ -79,11 +79,10 @@
         </div>
 
     </div>
-
-    <div id="divload"
-        *ngIf="isSpinner">
-        <img src="../../../../../assets/image/icons/nestloading.gif"
-            style="position: relative;width:50px;">
-    </div>
-
 </block-ui>
+<div style="position:absolute;top:92%;left:50%;height:60px;width:60px;"
+    id="divload"
+    *ngIf="isSpinner">
+    <img src="../../../../../assets/image/icons/nestloading.gif"
+        style="position: relative;width:50px;">
+</div>
