--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -24,6 +24,6 @@
 			titleTwo="Cepat"></footer-feature>
 	</div>
 	<div class="d-flex justify-content-around align-items-center putih">
-		<footer-customer-support></footer-customer-support>
+		<footer-customer-support titleTwo="0812 8330 0388"></footer-customer-support>
 	</div>
 </div>
