--- a/src/app/shared/components/footer-customer-support/footer-customer-support.component.scss
+++ b/src/app/shared/components/footer-customer-support/footer-customer-support.component.scss
@@ -9,4 +9,15 @@
 .putih{
 	background-color: $putih-tok;
 	height: 100%;
+	margin-left: -6%;
+}
+
+.footer-feature-label {
+	color: $abu-abu-aspal;
+	margin-left: 35%;
+    margin-top: -18%;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 25px;
+
 }
