--- a/src/app/shared/components/footer-customer-support/footer-customer-support.component.html
+++ b/src/app/shared/components/footer-customer-support/footer-customer-support.component.html
@@ -1,8 +1,6 @@
-<div class="d-flex justify-content-start putih">
+<div class="justify-content-start putih">
 	<img id="cs_logo"
 		src="../../../../assets/image/logo/f-cs.png">
-	<!-- <div>
-		<div>Customer Support</div>
-		<div>08xx xxxx xxxx</div>
-	</div> -->
+		<div class="white-space-12px"></div>
+	<div class="footer-feature-label">{{titleTwo}}</div>
 </div>
