--- a/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
+++ b/src/app/modules/account/components/info-perusahaan-address-card/info-perusahaan-address-card.component.html
@@ -18,10 +18,10 @@
 	</div>
 	<div class="d-flex">
 		<trash-can (click)="deleteInfo()"
-			*ngIf="index != 0"></trash-can>
+			*ngIf="address?.is_head_office == 0"></trash-can>
 		<wsh wide="16px"></wsh>
 		<edit (click)="edit()"
-			*ngIf="index != 0"></edit>
+			*ngIf="address?.is_head_office == 0"></edit>
 		<wsh wide="16px"></wsh>
 		<set-utama-button [utama]="utama"
 			[index]="index"
