Revisi Bugs: [Product Detail] Container Kategori Is Appear When Loading To Get Product Detail

--- a/src/app/modules/detail-product/components/image-main/image-main.component.html
+++ b/src/app/modules/detail-product/components/image-main/image-main.component.html
@@ -4,7 +4,7 @@
 		(click)="openDialogImage(productDetail?.product_image)">
 
 
-		<img [src]="productDetail.product_image"
+		<img src="{{productDetail?.product_image}}"
 			class="card-img-top"
 			id="detail-main-image"
 			(error)="onImgError($event)">
