--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -12,8 +12,10 @@
 					wide='60%'></address-section>
 				<div class="white-space"></div>
 				<div *ngIf="qtyproduk > 0;">
-					<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">{{keyword}}</span> di
+					<div id="label-total-produk">{{qtyproduk}} produk <span id="choosen-produk">{{keyword}}</span>
+						di
 						<span id="choosen-produk">{{namakategori}}</span>
+						<span id="choosen-produk">{{namasubkategori}}</span>
 					</div>
 				</div>
 
