--- a/src/app/modules/detail-product/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/modules/detail-product/components/breadcrumb/breadcrumb.component.html
@@ -5,18 +5,15 @@
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
 	<div class="breadcrumb-link"
-		[routerLink]="['../pilih-produk']"
-		(click)="bukapencarian(productDetail.category_id,productDetail.subcategory_id)">{{productDetail.category}}</div>
+		(click)="carikat(catid,subcatid)">{{prodcat}}</div>
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
 	<div class="breadcrumb-link"
-		[routerLink]="['../pilih-produk']"
-		(click)="bukapencarian(productDetail.category_id,productDetail.subcategory_id)">{{productDetail.subcategory}}
+		(click)="carisubkat(catid,subcatid)">{{subcat}}
 	</div>
 	<img src="../../../../../assets/image/icons/arrow.svg"
 		class="arrow-breadcrumb">
-	<font class="th-produk">
-		<div class="breadcrumb-link">{{productDetail.product_name}}</div>
-	</font>
-	<!-- {{productDetail | json}} -->
+	<span class="th-produk">
+		<div class="breadcrumb-link">{{prodname}}</div>
+	</span>
 </div>
